--- a/latexguidelines/typesetters.tex
+++ b/latexguidelines/typesetters.tex
@@ -1,4 +1,4 @@
-\chapter{Typesetters}
+\chapter{Typesetting}
 In order to finalize the typesetting of your volume, proceed as follows, in exactly that order:
 
 \begin{enumerate}
@@ -6,10 +6,10 @@ In order to finalize the typesetting of your volume, proceed as follows, in exac
  \item make again sure that the content is final 
  \item make sure title and author fit on both cover and spine. 
  \item check that all chapter titles fit the page width and on their line in the table of contents. 
- \item check that all chapter authors have correct affiliations.
- \item check that all chapter authors fit the page width and on their line in the table of contents. Check spacing in the table of contents. 
  \item check that even page headers fit the page width for all chapters
  \item check that odd page headers fit the page width for all chapters
+ \item (for edited volumes) check that all chapter authors have correct affiliations.
+ \item (for edited volumes) check that all chapter authors fit the page width and on their line in the table of contents. Check spacing in the table of contents. 
  \item check the appearance of the table of contents
  \item check the impressum page. Is all information about authors, typesetters, proofreaders, series given?
  \item check whether all lines fit the page width. If there are lines which stick out, this is either due to missing information about hyphenation, or there is simply no good way to fit the words in one line. In the former case, add hyphenation information to the file \verb+localhyphenation.sty+. You can also prevent hyphenation of a word by putting it in an \verb+\mbox{}+. Sometimes, the only solution is to change the sentence slightly. Common operations include changing the place of an adverb or using synonyms.
