--- a/latexguidelines/proofreaders.tex
+++ b/latexguidelines/proofreaders.tex
@@ -1,7 +1,7 @@
-\chapter{Proofreaders}
+\chapter{Proofreading}
 Proofreaders should pay attention to spelling, grammar, style, etc.  Please refer to the Generic Style Rules and the house rules listed in \sectref{sec:houserules}.
 
-Proofreaders can choose their preferred way of working. Pdf comments, scanned comments on printout, or lists of errors with page numbers are all acceptable.
+Proofreaders can choose their preferred way of working. Pdf comments, scanned comments on printout, or lists of errors with page numbers are in principle all acceptable. In general, however, it is preferable that proofreaders work on the online annotation platform \url{www.paperhive.org}. 
 
 \laundrybox{Proofreading text}{ 
 \laundryitem All floats are referenced.
@@ -22,14 +22,14 @@ Proofreaders can choose their preferred way of working. Pdf comments, scanned co
 }
 
 
-\laundrybox{Proofreading bibliography}{
+\laundrybox{Proofreading list of references}{
 \laundryitem All first names are given in full unless the person prefers to use initials.
 % \laundryitem No double city names in places of publication.
-\laundryitem \emph{et al.} not used in bibliography
+\laundryitem \emph{et al.} not used in list of references
 \laundryitem Subtitles are capitalized
 \laundryitem Proper nouns are capitalized
 \laundryitem German nouns are capitalized
-\laundryitem No extraneous information in bibliography
+\laundryitem No extraneous information in list of references
 \laundryitem Series title and series number are typeset correctly
 } 
 
